Experimentally remove overflow-x: hidden as partial fix for #229

--- a/app/assets/stylesheets/content.css.scss
+++ b/app/assets/stylesheets/content.css.scss
@@ -3,7 +3,7 @@
 #page {
   background: $white;
   padding: 20px 0 30px;
-  overflow: hidden;
+  overflow-y: hidden;
   min-height: 450px;
   #content {
     width: 630px;
